--- a/views/index.erb
+++ b/views/index.erb
@@ -29,7 +29,7 @@
             <td><%= @address %></td>
             <td><%= @port %></td>
             <td><%= @version %></td>
-            <td><%= time_ago_in_words(@status_change_time) %></td>
+            <td><%= time_ago_in_words(@last_status_change) %></td>
           </tr>
         </tbody>
       </table>
@@ -47,7 +47,7 @@
             <% @online_players.each do |player| %>
               <tr>
                 <td><%= player[:name] %></td>
-                <td><%= time_ago_in_words(player[:connected_at]) %></td>
+                <td><%= time_ago_in_words(player[:last_connect]) %></td>
               </tr>
             <% end %>
           </tbody>
@@ -66,7 +66,7 @@
           <% @active_worlds.each do |world| %>
             <tr>
               <td><%= world[:coords] %></td>
-              <td><%= time_ago_in_words(world[:loaded_at]) %></td>
+              <td><%= time_ago_in_words(world[:last_load]) %></td>
             </tr>
           <% end %>
         </tbody>
@@ -82,7 +82,7 @@
           <% @offline_players.each do |player| %>
             <tr>
               <td><%= player[:name] %></td>
-              <td><%= time_ago_in_words(player[:last_seen]) %> ago</td>
+              <td><%= time_ago_in_words(player[:last_disconnect]) %> ago</td>
             </tr>
           <% end %>
         </table>
