--- a/views/index.erb
+++ b/views/index.erb
@@ -26,6 +26,8 @@
           // use the zebra stripe widget if you plan on hiding any rows (filter widget)
           widgets : [ "uitheme" ],
 
+          sortList: [[1,0]],
+
           widgetOptions : {
             // using the default zebra striping class name, so it actually isn't included in the theme variable above
             // this is ONLY needed for bootstrap theming if you are using the filter widget, because rows are hidden
